# resume-evaluator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: Quick Start.ipynb
resume_evaluator/: __init__.py  config.py  llm.py  schemas.py
resume_evaluator/agents/: __init__.py  evaluate_fit.py  extract_job_description.py  extract_profile.py
resume_evaluator/api/: __init__.py  app.py
resume_evaluator/parsers/: __init__.py  pdf.py
resume_evaluator/pipeline/: __init__.py  graph.py
resume_evaluator/ui/: __init__.py  app.py
tests/: __init__.py  test_pipeline.py
