[project]
name = "resume-evaluator"
version = "0.1.0"
description = "Resume evaluator system using OpenAI LLM, LangGraph, FastAPI, and Streamlit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "openai>=1.55.0",
    "langgraph>=0.2.44",
    "fastapi>=0.115",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.30",
    "pypdf>=5.0.0",
    "tqdm>=4.66",
    "tenacity>=9.0",
    "streamlit>=1.40",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "pylint>=3.3.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "jupytext>=1.16.4",
    "nbstripout>=0.7.1",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resume_evaluator"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["resume_evaluator"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "pypdf.*",
]
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
